<resources>




    <string name="app_name">Trending</string>
    <string name="txt_author">Author</string>
    <string name="repoName">txt_name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_sort_stars">Sort By Stars</string>
    <string name="menu_sort_name">Sort By Name</string>
    <string name="retry">RETRY</string>
    <string name="language">language</string>
    <string name="stars">stars</string>
    <string name="fork">fork</string>
</resources>