<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout


    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/_5sdp">

    <com.pkmmte.view.CircularImageView
        android:id="@+id/img_repo"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginStart="@dimen/_4sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:orientation="vertical"
        android:padding="@dimen/_5sdp"
        app:layout_constraintStart_toEndOf="@+id/img_repo"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt_author_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_author"
            android:textSize="@dimen/_12ssp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/txt_repo_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repoName"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@+id/img_repo"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/txt_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_4sdp"
            android:gravity="start"
            android:textSize="@dimen/_10ssp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin_fork"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:gravity="start"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@+id/img_repo"
        app:layout_constraintTop_toBottomOf="@+id/lin_desc">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:gravity="start"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/img_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:background="@drawable/staryellow" />

            <TextView
                android:id="@+id/txt_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp"
                android:text="@string/language"
                android:textSize="@dimen/_10ssp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_4sdp"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/img_stars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:background="@drawable/staryellow" />

            <TextView
                android:id="@+id/txt_stars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp"
                android:text="@string/stars"
                android:textSize="@dimen/_10ssp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="@dimen/_4sdp"
            android:gravity="end"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/img_fork"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:background="@drawable/forckblack" />

            <TextView
                android:id="@+id/txt_fork"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp"
                android:text="@string/fork"
                android:textSize="@dimen/_10ssp" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>